# 2025-Summer-School-Acoustics

./: .gitignore  .readthedocs.yaml  LICENSE  development_readme.md  environment.yml  environment_day2.yml  environment_day3.yml  pyproject.toml  readme.md
NoteBooks/: High_Frequency_rain_demo.ipynb  Low-frequency hydrophone zarr.ipynb  Using OOIPY.ipynb  day_2_High_Frequency_wind_demo.ipynb  day_2_ambient_sound_exploration.ipynb  day_2_low_frequency_hydrophone_zarr.ipynb  day_2_ooipy.ipynb  day_2_ooipy_blank.ipynb  day_2_zarr_spectrograms.ipynb  day_3_RCA_zarr_ADCPmethane.ipynb  day_3_xarray_tutorial.ipynb  install_arlpy.ipynb
NoteBooks/day01_ooi_data_access/: creating_annotations.ipynb  day01_phsen_data_access.ipynb
NoteBooks/day1_conda/: env1.yml  phsen_access_simplified.ipynb
NoteBooks/python/: creating_annotations.ipynb
docs/: conf.py  curriculum.md  day01_ooi_jhub_setup.md  getting_started.md  index.md  jhub_setup.md  makefile  summer_school_modules.md
scripts/: init_conda.sh  setup_ooi_creds.sh
src/ooi_2025_summer_school_acoustics/: __about__.py  __init__.py  hydrophone_cloud_tools.py
